<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw5.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextCity"
        android:hint="@string/lbl_city_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextCity"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextState"
        android:hint="@string/lbl_state_hint"/>

    <Button
        android:text="@string/lbl_submit"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubmit"
        android:layout_width="200dp"
        android:layout_below="@+id/editTextState"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttonSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/listViewFavorites"
        android:headerDividersEnabled="false"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNoFav"
        android:visibility="visible"
        android:layout_below="@+id/buttonSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="105dp"
        android:text="@string/lbl_no_favorites"
        android:textAlignment="center"/>
</RelativeLayout>
