<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw5.WeatherDetailsActivity">

    <TextView
        android:text="@string/lbl_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textViewLocation"/>

    <ImageView
        android:layout_width="128dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="18dp"
        android:id="@+id/imageViewCondition"
        android:layout_height="64dp"
        android:layout_below="@+id/textViewLocation"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="TEMP F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTemp"
        android:textSize="30sp"
        android:layout_below="@+id/imageViewCondition"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"/>

    <TextView
        android:text="Condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCondition"
        android:layout_below="@+id/textViewTemp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textViewCondition"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearMax">

        <TextView
            android:text="@string/lbl_max_temp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:layout_weight=".5"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMax"
            android:layout_weight=".5"
            android:textStyle="normal|bold"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearMax"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearMin">

        <TextView
            android:text="@string/lbl_min_temp"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            android:layout_weight=".5"
            android:layout_width="100dp"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMin"
            android:layout_weight=".5"
            android:textStyle="normal|bold"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_above="@+id/linearWinds"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearMin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearFeels"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:text="@string/lbl_feels_like"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView20"
                    android:layout_weight=".5"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewFeels"
                    android:layout_weight=".5"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearHumidity"
                android:layout_below="@+id/linearFeels"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/lbl_humidity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView22"
                    android:layout_weight=".5"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewHumidity"
                    android:layout_weight=".5"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearDewpoint"
                android:layout_below="@+id/linearHumidity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/lbl_dewpoint"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView24"
                    android:layout_weight=".5"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewDewpoint"
                    android:layout_weight=".5"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearDewpoint"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearPressure"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/lbl_pressure"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView26"
                    android:layout_weight=".5"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPressure"
                    android:layout_weight=".5"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearPressure"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearClouds"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/lbl_clouds"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView28"
                    android:layout_weight=".5"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewClouds"
                    android:layout_weight=".5"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearClouds"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearWinds"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/lbl_winds"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView30"
                    android:layout_weight=".5"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewWinds"
                    android:layout_weight=".5"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
